# evlampiy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: lint.sh
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/workflows/: claude-review.yml  deploy.yml  gemini-review.yml
docs/: ADMIN.md  README.de.md  README.es.md  README.ru.md  WHATSAPP_LINKING.md  WHATSAPP_SETUP.md
scripts/: migrate_billing_v2.py  telethon_auth.py
src/: account_linking.py  ai_client.py  alerts.py  categorization.py  chat_params.py  config.py  const.py  credits.py  dto.py  github_api.py  github_oauth.py  gpt_commands.py  localization.py  main.py  mongo.py  obsidian.py  selftest.py  transcript_cleanup.py  wit_tracking.py
src/telegram/: __init__.py  admin.py  bot.py  chat_params.py  handlers.py  payments.py  setup.py  voice.py
src/whatsapp/: __init__.py  (+3 more)
tests/: conftest.py  fixtures.py  test_account_linking.py  test_admin.py  test_ai_client.py  test_bot.py  test_categorization.py  test_config.py  test_github_api.py  test_github_oauth.py  test_gpt_commands.py  test_groq_client.py  test_monetization.py  test_mongo.py  test_obsidian.py  test_payments.py  test_provider_selection.py  test_rate_limiter.py  test_recent_transcriptions.py  test_selftest.py  test_transcript_cleanup.py  test_transcription.py  test_user_flow.py  test_user_lifecycle.py  test_user_settings_lifecycle.py  test_voice_transcription_pipeline.py  test_whatsapp.py
(+8 files in other folders)
